--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -95,15 +95,15 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: com.mysql.jdbc.Driver
-    username: maihara
-    password: maihara
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
 
 environments:
     development:
         dataSource:
-            dbCreate: create
-            url: jdbc:mysql://localhost:3306/loja
+            dbCreate: create-drop
+            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
