--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.6.0"
     testRuntime "org.seleniumhq.selenium:selenium-remote-driver:3.6.0"
     testRuntime "org.seleniumhq.selenium:selenium-api:3.6.0"
+    compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
 bootRun {
@@ -86,3 +87,17 @@ assets {
     minifyJs = true
     minifyCss = true
 }
+task stage(){
+    dependsOn clean, war
+}
+
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
